add pin func and search func on map

--- a/MapSearch/Info.plist
+++ b/MapSearch/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>現在位置の取得をして周辺検索をするのに必要です</string>
 </dict>
 </plist>
